# Research-OS

./: README.md  RELEASE_NOTES_v0.0.1.md  RELEASE_NOTES_v0.0.2.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.jsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: CalendarEventModal.jsx  CalendarView.jsx  Column.jsx  Header.jsx  KanbanBoard.jsx  Sidebar.jsx  TaskCard.jsx  TaskList.jsx  TaskModal.jsx  WorkflowDetail.jsx  WorkflowModal.jsx
src/constants/: stages.js  taskTypes.js
src/data/: seedTasks.js  storage.js  taskModel.js  workflowModel.js
src/hooks/: useTasks.js
src/pages/: CalendarPage.jsx  Dashboard.jsx  MiscPage.jsx  ResearchPage.jsx
src/utils/: calendar.js  date.js
